appId: host.exp.exponent
---
- launchApp
- openLink: "exp://10.0.2.2:8081"

# 1. Correo
- tapOn: "correo@uta.edu.ec"
- inputText: "apuruncajas1832@uta.edu.ec"

# 2. Contraseña
- tapOn: "Contraseña"
- inputText: "Alan2005"

# 3. Iniciar sesión
- tapOn: "Iniciar Sesión"

# 4. Validar que se cargó el home del pasajero
- assertVisible: "Viajes en tu zona"
